<resources>
    <string name="app_name">HealthApp</string>
    <string name="action_settings">Settings</string>
    <string name="activity_a_label">Android Data Storage Sample</string>
    <string name="activity_b_label">Preference Storage View</string>
    <string name="activity_c_label">SQLite Storage View</string>
    <string name="btn_start_b_label">Start Activity B</string>
    <string name="btn_login_label">Log In</string>
    <string name="hint_email">Email</string>
    <string name="hint_pwd">Password</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="register_user">Sign Up</string>
    <string name="btn_sql_label">SQLite</string>
    <string name="dialog_text">Simple Dialog</string>
    <string name="txt_signin">Sign In</string>
    <string name="txt_book_author">Android Book Author</string>
    <string name="txt_description">Description</string>
    <string name="btn_finish_a_label">Close App</string>
    <string name="btn_pref_label">Preferences</string>
    <string name="save_success_msg">Message saved successfully!</string>
    <string name="btn_save_label">Save</string>
    <string name="btn_cancel_label">Cancel</string>
    <string name="btn_finish_dialog_label">Close</string>
    <string name="btn_test_cholestrol">Cholesterol</string>
    <string name="btn_test_TSH">TSH</string>
    <string name="btn_glucose">Glucose</string>
    <string name="btn_uti">Urinary Track Infection</string>
    <string name="btn_hiv">HIV</string>
    <string name="lbl_test">Choose Test</string>
    <string name="txt_patientinfo">Patient Information</string>
    <string name="txt_patientname">Name</string>
    <string name="txt_patientid">ID</string>
    <string name="txt_patientage">Age</string>
    <string name="txt_patientgender">Gender</string>
    <string name="txt_patientweight">Weight(lbs)</string>
    <string name="txt_patientsmoker">Smoker(Y/N)</string>
    <string name="txt_patientfamilyhistory">Family History of</string>
    <string name="txt_patientheartdisease">Heart Disease?</string>
    <string name="txt_measure">Measured</string>
    <string name="txt_totalcholesterol">Total Cholesterol</string>
    <string name="healthrisks">Health Risks</string>
    <string name="heartattack">Heart Attack</string>
    <string name="stroke">Stroke</string>
    <string name="vasculardisease">Vascular Disease</string>
</resources>
