<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/rel_main"
    android:background="@drawable/skyblue">
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColorHint="@color/black"
        android:hint="@string/hint_email"
        android:id="@+id/edit_txt_username"
        android:layout_marginTop="111dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/edit_txt_pwd"
        android:layout_alignStart="@+id/edit_txt_pwd" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_txt_pwd"
        android:textColorHint="@color/black"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/edit_txt_username"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_pwd"
        />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_label"
        android:textSize="20dp"
        android:textColorHighlight="@color/black"
        android:id="@+id/btn_login"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/edit_txt_pwd"
        android:layout_alignRight="@+id/edit_txt_pwd"
        android:layout_alignEnd="@+id/edit_txt_pwd"
        android:layout_alignLeft="@+id/edit_txt_pwd"
        android:layout_alignStart="@+id/edit_txt_pwd"
        android:background="@drawable/shapes"
        android:onClick="startHomeScreen"

        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textColor="@color/black"

        android:text="@string/forgot_pwd"
        android:id="@+id/btn_forgot_pwd"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/shapes"
        android:textAllCaps="false"
        />

    <Button
        android:textSize="15dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user"
        android:id="@+id/btn_register"
        android:layout_alignTop="@+id/btn_forgot_pwd"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/shapes"
        android:textAllCaps="false"/>

</RelativeLayout>
